# netspeed

./: .envrc  Cargo.toml  Makefile.toml  README.md
src/: cli.rs  client.rs  command.rs  lib.rs  logger.rs  main.rs  server.rs  util.rs
