[package]
name = "netspeed"
version = "0.1.0"
authors = ["ymgyt <yamaguchi7073xtt@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "measure tcp throughput"
edition = "2018"
repository = "https://github.com/ymgyt/netspeed"
readme = "README.md"
caregories = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
env_logger = "0.7.1"
log = "0.4.8"
chrono = "0.4.10"
byteorder = "1.3.4"
anyhow = "1.0.26"

